# build-a2a-demo-mcp

./: .gitignore  README.md  pyproject.toml  quickstart.md
a2a-cloudflare-workers/agent-gateway/: README.md  package.json  tsconfig.json  wrangler.toml
a2a-cloudflare-workers/agent-gateway/src/: index.ts  session.ts  types.ts
a2a-cloudflare-workers/agents/air-tickets/: README.md  package-lock.json  package.json  wrangler.toml
a2a-cloudflare-workers/agents/car-rental/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
a2a-cloudflare-workers/agents/hotels/: README.md  package-lock.json  package.json  wrangler.toml
a2a-cloudflare-workers/agents/orchestrator/: README.md  package-lock.json  package.json  wrangler.toml
a2a-cloudflare-workers/agents/planner/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
a2a-cloudflare-workers/agents/summary/: package-lock.json  package.json  tsconfig.json  wrangler.toml  wrangler.toml.bak
a2a-cloudflare-workers/mcp-registry/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml
a2a-cloudflare-workers/mcp-registry/sql/: schema.sql  seed.sql
a2a-cloudflare-workers/mcp-registry/src/: agent-health.ts  agent-registry.ts  embeddings.ts  index.ts  sql-validator.ts  tools.ts  types.ts
a2a-cloudflare-workers/scripts/: create-d1-database.sh  create-kv-namespaces.sh  deploy-dev.sh  kv-namespaces.json  kv-namespaces.md  register-agents.sh  secure-deploy.sh  test-deployment-with-auth.sh  test-deployment.sh  test-local.sh
a2a-cloudflare-workers/shared/: package-lock.json  package.json  tsconfig.json
a2a-inspector/backend/: pyproject.toml
demo/ui/: main.py
docs/: llms.txt  quickstart.md
(+47 files in other folders)
