[project]
name = "build-a2a-demo-mcp"
version = "0.1.0"
description = "A2A Demo with MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core A2A dependencies
    "a2a-sdk>=0.2.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    
    # MCP Agent dependencies
    "click>=8.1.8",
    "fastmcp>=1.0",
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.91.0",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.4.1",
    "mcp[cli]>=1.5.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.0",
    
    # CLI dependencies
    "asyncclick>=8.1.8",
]

[project.scripts]
a2a-mcp = "a2a_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["agents/a2a_mcp/src/a2a_mcp", "common", "hosts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "ruff>=0.11.2"]